k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ipark-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ipark-backend
  template:
    metadata:
      labels:
        app: ipark-backend
    spec:
      volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "ipark-secrets-provider"
      containers:
        - name: ipark-backend
          image: IMAGE_PLACEHOLDER
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "384Mi"
              cpu: "300m"
          volumeMounts:
            - name: secrets-store-inline
              mountPath: "/mnt/secrets-store"
              readOnly: true
