k8s/ipark-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ipark-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ipark-app
  template:
    metadata:
      labels:
        app: ipark-app
    spec:
      containers:
        - name: ipark-container
          image: alexisvo/ipark-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              memory: "350Mi"
            requests:
              memory: "150Mi"
