k8s/ipark-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ipark-service
  namespace: default
spec:
  type: NodePort
  selector:
    app: ipark-app
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 32000
