k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ipark-service
  namespace: default
  labels:
    app: ipark-backend
spec:
  type: NodePort
  selector:
    app: ipark-backend
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
